objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Listing_Region__c</fullName>
        <formula>Vehicle_ID__r.Listing_Region_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Listing Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Account_Number__c</fullName>
        <label>Loan Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logged_In_User_Match__c</fullName>
        <formula>OR($User.Id = Inside_Sales_Representative__r.Id, $User.Id = Customer_Experience_Representative__r.Id, $User.Id = Customer_Relationship_Manager__r.Id, $User.Id = OwnerId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged In User Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Stage Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attempted Outreach - Left Voicemail or Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blacklisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought Another Vehicle - Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought Another Vehicle - Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought Another Vehicle - Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Being Shipped to Home Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Sold To Another Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist Post Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Deciding Whether To Work With Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Hung Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer No Longer Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Unresponsive - Touch 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Unresponsive - Touch 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Unresponsive - Touch 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Wanted to Negotiate Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desired Car Coming Soon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desired Car Sale Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desired Car Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desired Car Went to Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Displayed Interest - Cancelled Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Like Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Trust Shift Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Want To Pay Taxes And Registration Nor Buyer Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DQ - Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DQ - Dealer Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DQ - Excessive Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DQ - Heavily Modified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DQ - Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DQ - Make/Model</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_Sale_Price__c</fullName>
        <label>Lost Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <formula>TEXT(Vehicle_ID__r.Make__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Cost__c</fullName>
        <label>Marketing Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migrated_At__c</fullName>
        <description>Time at which this object was migrated</description>
        <label>Migrated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Source_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Base object from which this object was migrated.</description>
        <label>Migration Source ID</label>
        <referenceTo>Migration_Source__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <formula>Vehicle_ID__r.Mileage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Priced_Reason__c</fullName>
        <label>Not Priced Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Current Model Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Pricing Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No MMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enough Comps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_Of_Accidents__c</fullName>
        <formula>Vehicle_ID__r.Number_Of_Accidents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Accidents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Owners__c</fullName>
        <formula>Vehicle_ID__r.Number_Of_Owners__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Owners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Vehicle_ID__r.Name &amp; &apos; - &apos; &amp; Account.Name &amp; &apos; - &apos; &amp; Vehicle_ID__r.Exterior_Color__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Of_State_Buyer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out Of State Buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Response__c</fullName>
        <label>Outreach Response</label>
        <picklist>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Method_To_Seller__c</fullName>
        <label>Payment Method To Seller</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payoff_Amount__c</fullName>
        <label>Payoff Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payoff_Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payoff Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payoff_Sent_On__c</fullName>
        <label>Payoff Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_Tracking_Number__c</fullName>
        <label>Payoff Tracking Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Contract_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pickup Contract</label>
        <referenceTo>Shift_Contract__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pickup_Fee_Revenue__c</fullName>
        <label>Pickup Fee Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pickup_Fee__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Pickup Fee defaults to $100 but can be reduced to $0 if &quot;On The Spot Pickup&quot; or &quot;Seller Drop-Off&quot; is checked in the Evaluation. Change this field directly to override. Credit is split with the seller for non-Flat Fee deals.</description>
        <inlineHelpText>Pickup Fee defaults to $100 but can be reduced to $0 if &quot;On The Spot Pickup&quot; or &quot;Seller Drop-Off&quot; is checked in the Evaluation. Change this field directly to override. Credit is split with the seller for non-Flat Fee deals.</inlineHelpText>
        <label>Pickup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preserve_After_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this object should not be wiped as part of the migration.</description>
        <label>Preserve After Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Notes__c</fullName>
        <label>Pricing Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Page_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://shiftcars1.appspot.com/admin/pricing/deal/&quot; &amp; CASESAFEID(Id), &quot;Pricing Page&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Page URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Strategy__c</fullName>
        <label>Pricing Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Fee - Dollar Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Fee - Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Price - 0% Upside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific Car Search</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processing_Priority__c</fullName>
        <label>Processing Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Car_Commission__c</fullName>
        <label>Projected Car Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Public_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A reference field that links back to its Opportunity, and is safe to surface to users.</description>
        <externalId>true</externalId>
        <label>Public ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>CE - Bought the car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Does not have right features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Does not like condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Price too high</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Still shopping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE - Waiting for drop off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX - Car on deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX - Flipper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX - Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX - No response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX - Not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX - Not sure which car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX - Price too high</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_Sent_At__c</fullName>
        <label>Quote Sent At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quoted_Projected_in_Pocket__c</fullName>
        <formula>IF(
  ISPICKVAL(Pricing_Strategy__c, &apos;&apos;)
  || ISPICKVAL(Pricing_Strategy__c, &apos;Standard&apos;)
  || ISPICKVAL(Pricing_Strategy__c, &apos;Single Price - 0% Upside&apos;)
  || ISPICKVAL(Pricing_Strategy__c, &apos;Specific Car Search&apos;)
  || ISPICKVAL(Pricing_Strategy__c, &apos;Flat Fee - Dollar Amount&apos;)
  || ISPICKVAL(Pricing_Strategy__c, &apos;Flat Fee - Percent&apos;),
  MAX(
    Final_Guaranteed_Price__c,
    CASE(Pricing_Strategy__c, 
      &apos;&apos;, 
        Final_Guaranteed_Price__c + ((Quoted_Sale_Price__c - Final_Guaranteed_Price__c) * (Seller_Upside_Percentage__c / 100)),
      &apos;Standard&apos;,
        Final_Guaranteed_Price__c + ((Quoted_Sale_Price__c - Final_Guaranteed_Price__c) * (Seller_Upside_Percentage__c / 100)), 
      &apos;Single Price - 0% Upside&apos;,
        Final_Guaranteed_Price__c + ((Quoted_Sale_Price__c - Final_Guaranteed_Price__c) * (Seller_Upside_Percentage__c / 100)), 
      &apos;Specific Car Search&apos;,
        Final_Guaranteed_Price__c + ((Quoted_Sale_Price__c - Final_Guaranteed_Price__c) * (Seller_Upside_Percentage__c / 100)), 
      &apos;Flat Fee - Dollar Amount&apos;,
        Quoted_Sale_Price__c - Flat_Fee__c - Pickup_Fee__c, 
      &apos;Flat Fee - Percent&apos;,
        Quoted_Sale_Price__c - (Quoted_Sale_Price__c * Flat_Fee_Percent__c) - Pickup_Fee__c,
      0
    )
  ),
  0
) - IF(Advance_Funds_Amount__c != 0,Advance_Funds_Fee__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quoted Projected in Pocket</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Sale_Price__c</fullName>
        <label>Quoted Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_For_Selling__c</fullName>
        <label>Reason For Selling</label>
        <picklist>
            <picklistValues>
                <fullName>Buying A New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can No Longer Afford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Like Current Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living In City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs A Smaller Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs A Bigger Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Payout__c</fullName>
        <label>Referral Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referral_Program_Or_Promotion__c</fullName>
        <label>Referral Program Or Promotion</label>
        <picklist>
            <picklistValues>
                <fullName>AnyPerk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At2 Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoFresh Mobile Carwash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Pro Detailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenge 4 Charity (Stanford)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenge 4 Charity (UCLA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CrystalCity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCAutoShow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCLaunch250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dent Artist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dent Discount Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dents Doctor PDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DentSquad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DentX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFJ Portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropbox San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EcoWash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed&apos;s Mobile Detailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EuroPros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends and Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoldenBright Detail Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grateful Dent PDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highland Portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IndyExpress Mobile Detail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrer_Analytics_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer Analytics</label>
        <referenceTo>Referrer_Analytics__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The region in which the seller&apos;s vehicle was acquired</description>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <formula>Region_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Addendum_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Addendum</label>
        <referenceTo>Shift_Contract__c</referenceTo>
        <relationshipLabel>Opportunities (Repair Addendum)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Repair_Authorization_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Authorization</label>
        <referenceTo>Shift_Contract__c</referenceTo>
        <relationshipLabel>Opportunities (Repair Authorization)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Repair_Summary__c</fullName>
        <label>Repair Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Test_Drive_Location__c</fullName>
        <label>Requested Test Drive Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Test_Drive_Time__c</fullName>
        <label>Requested Test Drive Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requires_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Returnable_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returnable Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Gross__c</fullName>
        <formula>CASE(
  Pricing_Strategy__c, 
  &apos;&apos;, 
    IF(
      Final_Sale_Price__c &gt; Final_Guaranteed_Price__c, 
      (Final_Sale_Price__c - Final_Guaranteed_Price__c) * ((100 - Seller_Upside_Percentage__c) / 100), 
      Final_Sale_Price__c - Final_Guaranteed_Price__c
    ), 
  &apos;Standard&apos;, 
    IF(
      Final_Sale_Price__c &gt; Final_Guaranteed_Price__c, 
      (Final_Sale_Price__c - Final_Guaranteed_Price__c) * ((100 - Seller_Upside_Percentage__c) / 100), 
      Final_Sale_Price__c - Final_Guaranteed_Price__c
    ), 
  &apos;Single Price - 0% Upside&apos;, 
    IF(
      Final_Sale_Price__c &gt; Final_Guaranteed_Price__c, 
      (Final_Sale_Price__c - Final_Guaranteed_Price__c) * ((100 - Seller_Upside_Percentage__c) / 100), 
      Final_Sale_Price__c - Final_Guaranteed_Price__c
    ), 
  &apos;Specific Car Search&apos;, Specific_Car_Search_Fee__c, 
  &apos;Flat Fee - Dollar Amount&apos;,
    IF(
      Final_Sale_Price__c - Flat_Fee__c - Pickup_Fee__c &gt;  Final_Guaranteed_Price__c,
      Flat_Fee__c + Pickup_Fee__c, 
      Final_Sale_Price__c - Final_Guaranteed_Price__c
    ), 
  &apos;Flat Fee - Percent&apos;, 
    IF(
      Final_Sale_Price__c - (Final_Sale_Price__c * Flat_Fee_Percent__c) - Pickup_Fee__c &gt; Final_Guaranteed_Price__c,
      (Final_Sale_Price__c * Flat_Fee_Percent__c) + Pickup_Fee__c, 
      Final_Sale_Price__c - Final_Guaranteed_Price__c
    ), 
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue (Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Net_2__c</fullName>
        <label>Revenue Net 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Net__c</fullName>
        <formula>Revenue_Gross__c - (Shift_Costs_Repairs__c + Covered_Repair_Cost__c) + Late_Paperwork_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Same_Day_Advance_Funds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Day Advance Funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seller_Contract_Expires_On__c</fullName>
        <formula>Seller_Contract_ID__r.Expires_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Contract Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seller_Contract_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller Contract</label>
        <referenceTo>Shift_Contract__c</referenceTo>
        <relationshipLabel>Opportunities (Seller Contract)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_Contract_PDF__c</fullName>
        <formula>Seller_Contract_ID__r.PDF_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Contract PDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Contract_Sent_On__c</fullName>
        <formula>Seller_Contract_ID__r.Sent_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Contract Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seller_Contract_Signed_On__c</fullName>
        <formula>Seller_Contract_ID__r.Signed_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Contract Signed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seller_Costs_DMV__c</fullName>
        <label>Seller Costs DMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_Costs_Repair_Approval_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seller Costs Repair Approval Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seller_Costs_Repair_Approval_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Seller Costs Repair Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seller_Costs_Repairs_Estimate__c</fullName>
        <label>Seller Costs Repairs Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_Costs_Repairs_Preapproved__c</fullName>
        <label>Seller Costs Repairs Pre-Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_Costs_Repairs__c</fullName>
        <label>Seller Costs Repairs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_Desired_Timeframe__c</fullName>
        <description>The seller&apos;s stated answer to the question: &quot;When do you plan to sell your car?&quot;</description>
        <inlineHelpText>The seller&apos;s stated answer to the question: &quot;When do you plan to sell your car?&quot;</inlineHelpText>
        <label>Seller Desired Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Within 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 90 days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seller_Payment_Gross_2__c</fullName>
        <label>Seller Payment Gross 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_Payment_Gross__c</fullName>
        <formula>IF(
  ISPICKVAL(Pricing_Strategy__c, &apos;&apos;)
  || ISPICKVAL(Pricing_Strategy__c, &apos;Standard&apos;)
  || ISPICKVAL(Pricing_Strategy__c, &apos;Single Price - 0% Upside&apos;)
  || ISPICKVAL(Pricing_Strategy__c, &apos;Specific Car Search&apos;)
  || ISPICKVAL(Pricing_Strategy__c, &apos;Flat Fee - Dollar Amount&apos;)
  || ISPICKVAL(Pricing_Strategy__c, &apos;Flat Fee - Percent&apos;),
  MAX(
    Final_Guaranteed_Price__c,
    CASE(Pricing_Strategy__c, 
      &apos;&apos;, 
        Final_Guaranteed_Price__c + ((Final_Sale_Price__c - Final_Guaranteed_Price__c) * (Seller_Upside_Percentage__c / 100)), 
      &apos;Standard&apos;,
        Final_Guaranteed_Price__c + ((Final_Sale_Price__c - Final_Guaranteed_Price__c) * (Seller_Upside_Percentage__c / 100)), 
      &apos;Single Price - 0% Upside&apos;,
        Final_Guaranteed_Price__c + ((Final_Sale_Price__c - Final_Guaranteed_Price__c) * (Seller_Upside_Percentage__c / 100)), 
      &apos;Specific Car Search&apos;,
        Final_Guaranteed_Price__c + ((Final_Sale_Price__c - Final_Guaranteed_Price__c) * (Seller_Upside_Percentage__c / 100)), 
      &apos;Flat Fee - Dollar Amount&apos;,
        Final_Sale_Price__c - Flat_Fee__c - Pickup_Fee__c, 
      &apos;Flat Fee - Percent&apos;,
        Final_Sale_Price__c - (Final_Sale_Price__c * Flat_Fee_Percent__c) - Pickup_Fee__c,
      0
    )
  ),
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Payment (Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_Payment_Net_2__c</fullName>
        <label>Seller Payment Net 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_Payment_Net__c</fullName>
        <formula>Seller_Payment_Gross__c - 
CASE(
  Advance_Funds_Status__c, 
  &apos;Funded&apos;,
    Advance_Funds_Amount__c, 
  &apos;Closed&apos;,
    Advance_Funds_Amount__c, 
  Seller_Costs_DMV__c + Payoff_Amount__c + IF(Seller_Costs_Repairs__c != 0, Seller_Costs_Repairs__c, Seller_Costs_Repairs_Estimate__c)
) - Late_Paperwork_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Payment (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>